@@ -5,6 +5,9 @@ phpMyAdmin - ChangeLog
 $Id$
 $HeadURL$
 
+2007-03-01 Sebastian Mendel <cybot_tm@users.sourceforge.net>
+    * libraries/common.lib.php: bug #1671813 CVE-2006-1549 deep recursion crash
+
 2007-02-28 Marc Delisle  <lem9@users.sourceforge.net>
     * libraries/config.default.php: set $cfg['Servers'][$i]['ssl'] default
       value to false, we got reports from some users having problems with the
@@ -16,7 +19,7 @@ $HeadURL$
 
 2007-02-26 Marc Delisle  <lem9@users.sourceforge.net>
     * scripts/upgrade_tables_mysql_4_1_2+.sql: bug #1668662,
-      can create the new pma_designer_coords table 
+      can create the new pma_designer_coords table
 
 2007-02-25 Marc Delisle  <lem9@users.sourceforge.net>
     * libraries/common.lib.php: bug #1667466, undefined variable when
